dataset1235/2025-2/2947369575/users/2975895382/executions/3873599344_4190502342.log
== RUN (2025-08-20 22:44:40)
-- CODE: 
amigosTotal = 180

res = round(amigosTotal/4,1)
print(res)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:44:52)
-- CODE: 
amigosTotal = 180

res = amigosTotal/4
print(res)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:45:18)
-- CODE: 
amigosTotal = 180

res = round(amigosTotal/4,1)
print(res)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 22:45:11)
-- CODE: 
amigosTotal = 180

res = round(amigosTotal/4)
print(res)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:45:13)
-- CODE: 
amigosTotal = 180

res = round(amigosTotal/4)
print(res)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:44:34)
-- CODE: 
amigosTotal = 180

res = round(amigos/4,1)
print(res)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    res = round(amigos/4,1)
                ^^^^^^
NameError: name 'amigos' is not defined
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    res = round(amigos/4,1)
                ^^^^^^
NameError: name 'amigos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 22:44:51)
-- CODE: 
amigosTotal = 180

res = amigosTotal/4
print(res)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
